canvas: Use SPICE_UNALIGNED_CAST to avoid -Wcast-align warnings

This solves https://bugs.freedesktop.org/show_bug.cgi?id=104521.

Signed-off-by: Frediano Ziglio <fziglio@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>